Added Support for overlays by adding a `pack.mcmeta` file, useful for multiversion packs